# mkext4

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: mkfs.rs
src/: csum.rs  dirhash.rs  le.rs  lib.rs  sink.rs
src/layout/: alloc.rs  geometry.rs  mod.rs
src/reader/: mod.rs  verify.rs
src/spec/: consts.rs  dirent.rs  extent.rs  group_desc.rs  htree.rs  inode.rs  journal.rs  mod.rs  superblock.rs  xattr.rs
testdata/vectors/: README.md  dx_hash.json  manifest.json
tests/: differential.rs  hostile.rs  mount.rs  prop.rs  writer.rs
tests/common/: mod.rs
tools/: bench.sh  check_vectors.py  ci-e2fsprogs.sh  mkrefs.sh
